minor styling changes

--- a/index.html
+++ b/index.html
@@ -25,9 +25,10 @@
     #container{
       width: 1000px;
     }
-    p{
+    #legend p{
       font-size: 16px;
       font-weight: bold;
+      margin-top: 5px;
     }
     .fa {
       font-size: 3rem;
@@ -40,6 +41,9 @@
     #proficiencyLevel{
       display: grid;
       grid-template-columns: 1fr 1fr 1fr;
+    }
+    #proficiencyLevel p{
+      margin-bottom: 7px;
     }
     #legend{
       text-align: right;
@@ -110,7 +114,7 @@
     </div>
   </div>
 </div>
-<button id="download">download Images</button>
+<!--<button id="download">download Images</button>-->
 </div>
 <!--google charts timeline-->
 <script type="text/javascript">
