read data from xml

--- a/index.html
+++ b/index.html
@@ -116,6 +116,75 @@
 </div>
 <!--<button id="download">download Images</button>-->
 </div>
+<!--read data from xml-->
+<script>
+  const xhr = new XMLHttpRequest();
+  xhr.onreadystatechange = function() {
+    if (this.readyState === 4 && this.status === 200) {
+      const doc = xhr.responseXML;
+      const cv = getJXONTree(doc);
+
+      //read languages
+      const languages = cv.skillspassport.learnerinfo.skills.linguistic.foreignlanguagelist.foreignlanguage;
+      for (i = 0; i < languages.length; i++) {
+        console.log(languages[i].description.label);
+        console.log(languages[i].proficiencylevel);
+      }
+    }
+  };
+  xhr.open("GET", "data/cv.xml", true);
+  xhr.send();
+
+/*\
+|*|
+|*|  JXON Snippet #3 - Mozilla Developer Network
+|*|
+|*|  https://developer.mozilla.org/en-US/docs/JXON
+|*|  https://developer.mozilla.org/User:fusionchess
+|*|
+|*|  This framework is released under the GNU Public License, version 3 or later.
+|*|  http://www.gnu.org/licenses/gpl-3.0-standalone.html
+|*|
+\*/
+
+  function parseText (sValue) {
+    if (/^\s*$/.test(sValue)) { return null; }
+    if (/^(?:true|false)$/i.test(sValue)) { return sValue.toLowerCase() === "true"; }
+    if (isFinite(sValue)) { return parseFloat(sValue); }
+    if (isFinite(Date.parse(sValue))) { return new Date(sValue); }
+    return sValue;
+  }
+
+  function getJXONTree (oXMLParent) {
+    let vResult = /* put here the default value for empty nodes! */ true, nLength = 0, sCollectedTxt = "";
+    if (oXMLParent.hasAttributes && oXMLParent.hasAttributes()) {
+      vResult = {};
+      for (nLength; nLength < oXMLParent.attributes.length; nLength++) {
+        oAttrib = oXMLParent.attributes.item(nLength);
+        vResult["@" + oAttrib.name.toLowerCase()] = parseText(oAttrib.value.trim());
+      }
+    }
+    if (oXMLParent.hasChildNodes()) {
+      for (let oNode, sProp, vContent, nItem = 0; nItem < oXMLParent.childNodes.length; nItem++) {
+        oNode = oXMLParent.childNodes.item(nItem);
+        if (oNode.nodeType === 4) { sCollectedTxt += oNode.nodeValue; } /* nodeType is "CDATASection" (4) */
+        else if (oNode.nodeType === 3) { sCollectedTxt += oNode.nodeValue.trim(); } /* nodeType is "Text" (3) */
+        else if (oNode.nodeType === 1 && !oNode.prefix) { /* nodeType is "Element" (1) */
+          if (nLength === 0) { vResult = {}; }
+          sProp = oNode.nodeName.toLowerCase();
+          vContent = getJXONTree(oNode);
+          if (vResult.hasOwnProperty(sProp)) {
+            if (vResult[sProp].constructor !== Array) { vResult[sProp] = [vResult[sProp]]; }
+            vResult[sProp].push(vContent);
+          } else { vResult[sProp] = vContent; nLength++; }
+        }
+      }
+    }
+    if (sCollectedTxt) { nLength > 0 ? vResult.keyValue = parseText(sCollectedTxt) : vResult = parseText(sCollectedTxt); }
+    if (nLength > 0) { Object.freeze(vResult); }
+    return vResult;
+  }
+</script>
 <!--google charts timeline-->
 <script type="text/javascript">
   google.charts.load("current", {packages: ["timeline"]});
