--- a/index.html
+++ b/index.html
@@ -56,7 +56,8 @@
 <div id="timeline" style="height: 400px;"></div>
 <div id="canvas-holder" style="width:50%">
   <h1>Sprachkenntnisse</h1>
-  <canvas id="chart-area"></canvas>
+  <canvas id="chart-area1"></canvas>
+  <canvas id="chart-area2"></canvas>
 </div>
 
 <h1>Digitale Kompetenzen</h1>
@@ -118,6 +119,8 @@
 </div>
 <!--read data from xml-->
 <script>
+  let languageDataLabel = [];
+  let languageData = [];
   const xhr = new XMLHttpRequest();
   xhr.onreadystatechange = function() {
     if (this.readyState === 4 && this.status === 200) {
@@ -127,9 +130,10 @@
       //read languages
       const languages = cv.skillspassport.learnerinfo.skills.linguistic.foreignlanguagelist.foreignlanguage;
       for (i = 0; i < languages.length; i++) {
-        console.log(languages[i].description.label);
-        console.log(languages[i].proficiencylevel);
+        languageDataLabel.push(languages[i].description.label);
+        languageData.push(languages[i].proficiencylevel);
       }
+      drawRoseChart();
     }
   };
   xhr.open("GET", "data/cv.xml", true);
@@ -146,7 +150,6 @@
 |*|  http://www.gnu.org/licenses/gpl-3.0-standalone.html
 |*|
 \*/
-
   function parseText (sValue) {
     if (/^\s*$/.test(sValue)) { return null; }
     if (/^(?:true|false)$/i.test(sValue)) { return sValue.toLowerCase() === "true"; }
@@ -154,7 +157,6 @@
     if (isFinite(Date.parse(sValue))) { return new Date(sValue); }
     return sValue;
   }
-
   function getJXONTree (oXMLParent) {
     let vResult = /* put here the default value for empty nodes! */ true, nLength = 0, sCollectedTxt = "";
     if (oXMLParent.hasAttributes && oXMLParent.hasAttributes()) {
@@ -184,7 +186,136 @@
     if (nLength > 0) { Object.freeze(vResult); }
     return vResult;
   }
+
+<!--chart.js rose chart-->
+  function drawRoseChart() {
+    window.chartColors = {
+      color1: '#f0f9e8',
+      color2: '#bae4bc',
+      color3: '#7bccc4',
+      color4: '#43a2ca',
+      color5: '#0868ac',
+    };
+    const chartColors = window.chartColors;
+    const color = Chart.helpers.color;
+    Chart.defaults.global.defaultFontColor = '#444';
+    Chart.defaults.global.defaultFontFamily = "'Work Sans', 'Helvetica Neue', 'Helvetica', 'Arial', sans-serif";
+    Chart.defaults.global.defaultFontSize = 14;
+
+    // console.log(languageDataLabel);
+    // console.log(languageData);
+    // console.log(languageDataLabel[0]);
+    // console.log(languageData[1].listening);
+
+    let config = [];
+    for(i=0; i<languageDataLabel.length;i++){
+
+      let myData = [];
+      for (const value in languageData[i]) {
+        switch(languageData[i][value]) {
+          case "A1":
+            myData.push(1);
+            break;
+          case "A2":
+            myData.push(2);
+            break;
+          case "B1":
+            myData.push(3);
+            break;
+          case "B2":
+            myData.push(4);
+            break;
+          case "C1":
+            myData.push(5);
+            break;
+          case "C2":
+            myData.push(6);
+            break;
+        }
+      }
+
+      config[i] = {
+      data: {
+        datasets: [{
+          data: myData,
+          backgroundColor: [
+            color(chartColors.color1).alpha(0.6).rgbString(),
+            color(chartColors.color2).alpha(0.8).rgbString(),
+            color(chartColors.color3).alpha(0.8).rgbString(),
+            color(chartColors.color4).alpha(0.8).rgbString(),
+            color(chartColors.color5).alpha(0.8).rgbString(),
+          ],
+        }],
+        labels: [
+          "Hören",
+          "Lesen",
+          "An Gesprächen teilnehmen",
+          "Zusammenhängendes Sprechen",
+          "Schreiben"
+        ]
+      },
+      options: {
+        responsive: true,
+        legend: {
+          position: 'left',
+        },
+        title: {
+          display: true,
+          text: languageDataLabel[i]
+        },
+        tooltips: {
+          enabled: false
+        },
+        //change start angle for better legibility
+        startAngle: 1.3 * Math.PI,
+        scale: {
+          ticks: {
+            beginAtZero: false,
+            min: 0,
+            max: 6,
+            maxTicksLimit: 6,
+            suggestedMin: 6,
+            suggestedMax: 6,
+            stepSize: 1,
+            //change labeling
+            callback: function(label) {
+              switch (label) {
+                case 1:
+                  return 'A1';
+                case 2:
+                  return 'A2';
+                case 3:
+                  return 'B1';
+                case 4:
+                  return 'B2';
+                case 5:
+                  return 'C1';
+                case 6:
+                  return 'C2';
+              }
+            }
+          },
+          reverse: false
+        },
+        animation: {
+          animateRotate: true,
+          animateScale: true
+        }
+      }
+    };
+    }
+    window.onload = function() {
+      const chart1 = document.getElementById("chart-area1");
+      const chart2 = document.getElementById("chart-area2");
+      window.myPolarArea = Chart.PolarArea(chart1, config[0]);
+      // Chart.defaults.global.legend.display = false;
+      window.myPolarArea = Chart.PolarArea(chart2, config[1]);
+    };
+
+  }
+
 </script>
+
 <!--google charts timeline-->
 <script type="text/javascript">
   google.charts.load("current", {packages: ["timeline"]});
@@ -229,110 +360,6 @@
   }
 </script>
 
-<!--chart.js polar area chart-->
-<script>
-  const randomScalingFactor = function() {
-    return Math.round(Math.random() * 6);
-  };
-
-  window.chartColors = {
-    red: '#f0f9e8',
-    orange: '#bae4bc',
-    yellow: '#7bccc4',
-    green: '#43a2ca',
-    blue: '#0868ac',
-  };
-
-  const chartColors = window.chartColors;
-  const color = Chart.helpers.color;
-  Chart.defaults.global.defaultFontColor = '#444';
-  Chart.defaults.global.defaultFontFamily = "'Work Sans', 'Helvetica Neue', 'Helvetica', 'Arial', sans-serif";
-  Chart.defaults.global.defaultFontSize = 14;
-
-  const config = {
-    data: {
-      datasets: [{
-        data: [
-          randomScalingFactor(),
-          randomScalingFactor(),
-          randomScalingFactor(),
-          randomScalingFactor(),
-          randomScalingFactor(),
-        ],
-        backgroundColor: [
-          color(chartColors.red).alpha(0.6).rgbString(),
-          color(chartColors.orange).alpha(0.8).rgbString(),
-          color(chartColors.yellow).alpha(0.8).rgbString(),
-          color(chartColors.green).alpha(0.8).rgbString(),
-          color(chartColors.blue).alpha(0.8).rgbString(),
-        ],
-        label: 'Sprachen' // for legend
-      }],
-      labels: [
-        "Hören",
-        "Lesen",
-        "An Gesprächen teilnehmen",
-        "Zusammenhängendes Sprechen",
-        "Schreiben"
-      ]
-    },
-    options: {
-      responsive: true,
-      legend: {
-        position: 'left',
-      },
-      title: {
-        display: true,
-        text: 'Deutsch'
-      },
-      tooltips: {
-        enabled: false
-      },
-      // startAngle: 2.5 * Math.PI, //gelb
-      startAngle: 1.3 * Math.PI, //für rot
-      scale: {
-        ticks: {
-          beginAtZero: false,
-          min: 0,
-          max: 6,
-          maxTicksLimit: 6,
-          suggestedMin: 6,
-          suggestedMax: 6,
-          stepSize: 1,
-          callback: function(label) {
-            switch (label) {
-              case 0:
-                return 'ZERO';
-              case 1:
-                return 'A1';
-              case 2:
-                return 'A2';
-              case 3:
-                return 'B1';
-              case 4:
-                return 'B2';
-              case 5:
-                return 'C1';
-              case 6:
-                return 'C2';
-            }
-          }
-        },
-        reverse: false
-      },
-      animation: {
-        animateRotate: true,
-        animateScale: true
-      }
-    }
-  };
-
-  window.onload = function() {
-    const ctx = document.getElementById("chart-area");
-    window.myPolarArea = Chart.PolarArea(ctx, config);
-  };
-
-</script>
 <!--createImage from timeline and proficiencyLevel-->
 <script>
   //document ready
