--- a/index.html
+++ b/index.html
@@ -121,6 +121,7 @@
 <script>
   let languageDataLabel = [];
   let languageData = [];
+  let jobData = [];
   const xhr = new XMLHttpRequest();
   xhr.onreadystatechange = function() {
     if (this.readyState === 4 && this.status === 200) {
@@ -134,6 +135,31 @@
         languageData.push(languages[i].proficiencylevel);
       }
       drawRoseChart();
+
+      //read workexperience & education
+      const jobs = cv.skillspassport.learnerinfo.workexperiencelist.workexperience;
+      for (i = 0; i < jobs.length; i++) {
+        let fromYear = jobs[i].period.from["@year"];
+        let fromMonth = jobs[i].period.from["@month"].toString();
+        fromMonth = fromMonth.split(" ");
+        fromMonth = fromMonth[2];
+        let fromDate = new Date(fromYear, fromMonth);
+
+        let toDate = new Date();
+        if (jobs[i].period.to != undefined){
+          let toYear = jobs[i].period.to["@year"];
+          let toMonth = jobs[i].period.to["@month"].toString();
+          toMonth = toMonth.split(" ");
+          toMonth = toMonth[2];
+          toDate = new Date(toYear, toMonth);
+        }
+        jobData[i] = [];
+        let label = 'Schul- und Berufssbildung';
+        if (i !== 0){
+          label = '.';
+        }
+        jobData[i].push(label, jobs[i].position.label + ', ' + jobs[i].employer.name.toString(), fromDate, toDate);
+      }
     }
   };
   xhr.open("GET", "data/cv.xml", true);
@@ -314,14 +340,13 @@
 
   }
 
-</script>
-
 <!--google charts timeline-->
-<script type="text/javascript">
   google.charts.load("current", {packages: ["timeline"]});
   google.charts.setOnLoadCallback(drawChart);
 
   function drawChart() {
+    // console.log(jobData);
+
     const container = document.getElementById('timeline');
     const chart = new google.visualization.Timeline(container);
     const dataTable = new google.visualization.DataTable();
@@ -329,14 +354,14 @@
     dataTable.addColumn({type: 'string', id: 'Name'});
     dataTable.addColumn({type: 'date', id: 'Start'});
     dataTable.addColumn({type: 'date', id: 'End'});
-    dataTable.addRows([
-      ['Schul- und Berufssbildung', 'Matura, HTBLA Rennweg', new Date(2005, 7, 1), new Date(2010, 6, 1)],
-      ['.', 'Bachelor of Arts in Social Sciences, FH Oberösterreich', new Date(2012, 2, 4), new Date(2015, 2, 4)],
-      ['.', 'Dipl. Ing., FH St. Pölten', new Date(2015, 2, 4), new Date(2018, 2, 4)],
-      ['Berufserfahrung', 'Angestellter in der EDV-Abteilung, Wiener Hilfwerk', new Date(2010, 3, 21), new Date(2012, 2, 4)],
-      ['.', 'Berufspraktikum als Webdeveloper, Typoheads GmbH', new Date(2016, 2, 4), new Date(2016, 8, 4)],
-      ['.', 'Webdeveloper, selbstständig', new Date(2016, 2, 4), new Date(2017, 2, 4)],
-    ]);
+    dataTable.addRows(jobData
+      // ['Schul- und Berufssbildung', 'Matura, HTBLA Rennweg', new Date(2005, 7, 1), new Date(2010, 6, 1)],
+      // ['.', 'Bachelor of Arts in Social Sciences, FH Oberösterreich', new Date(2012, 2, 4), new Date(2015, 2, 4)],
+      // ['.', 'Dipl. Ing., FH St. Pölten', new Date(2015, 2, 4), new Date(2018, 2, 4)],
+      // ['Berufserfahrung', 'Angestellter in der EDV-Abteilung, Wiener Hilfwerk', new Date(2010, 3, 21), new Date(2012, 2, 4)],
+      // ['.', 'Berufspraktikum als Webdeveloper, Typoheads GmbH', new Date(2016, 2, 4), new Date(2016, 8, 4)],
+      // ['.', 'Webdeveloper, selbstständig', new Date(2016, 2, 4), new Date(2017, 2, 4)],
+    );
 
     const options = {
       timeline: {
@@ -358,10 +383,8 @@
     };
     chart.draw(dataTable, options);
   }
-</script>
 
 <!--createImage from timeline and proficiencyLevel-->
-<script>
   //document ready
   function r(f){/in/.test(document.readyState)?setTimeout('r('+f+')',9):f()}
   r(function(){
