--- a/index.html
+++ b/index.html
@@ -53,6 +53,8 @@
   </style>
 </head>
 <body>
+<!-- TODO: inject headlines & legend dynamic -->
+<!--TODO: improve design + add description -->
 <div id="container">
     <input type="file" id="files" name="files[]" />
     <output id="list"></output>
