--- a/index.html
+++ b/index.html
@@ -23,9 +23,23 @@
       /* enable smoother fonts */
       -webkit-font-smoothing: antialiased;
       -moz-osx-font-smoothing: grayscale;
+
+      /*add background gradient*/
+      background: #076585;  /* fallback for old browsers */
+      background: -webkit-linear-gradient(to bottom, #fff, #076585);  /* Chrome 10-25, Safari 5.1-6 */
+      background: linear-gradient(to bottom, #fff, #076585); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
     }
+
     #container{
-      width: 1060px;
+      width: 1110px;
+      min-height: 93vh;
+      margin: 0 auto;
+      padding: 25px;
+      background: #fff;
+    }
+    #description{
+      text-align: center;
+      margin: 0 auto;
     }
     #legend p{
       font-size: 16px;
@@ -36,9 +50,8 @@
       font-size: 3rem;
     }
     #digital{
-      display: grid;
       grid-template-columns: 3fr 7fr;
-      grid-gap: 10vmin;
+      grid-gap: 150px;
     }
     #proficiencyLevel{
       display: grid;
@@ -51,7 +64,12 @@
       text-align: right;
     }
     .hidden{
-      visibility: hidden;
+      display: none;
+    }
+
+    #roseChartGrid{
+      display: grid;
+      grid-template-columns: 1fr 1fr;
     }
 
     /*input field*/
@@ -65,7 +83,7 @@
     }
 
     .inputfile + label {
-      color: #d3394c;
+      color: #3498db;
       border: 2px solid currentColor;
       max-width: 80%;
       font-size: 1.25rem;
@@ -83,7 +101,7 @@
     .inputfile + label:hover {
       outline: 1px dotted #000;
       outline: -webkit-focus-ring-color auto 5px;
-      color: #722040;
+      color: #2980b9
     }
 
     .inputfile + label svg {
@@ -95,27 +113,54 @@
       margin-right: 0.25em;
     }
 
+    .header{
+      text-align: center;
+      margin-top: -35px;
+      margin-bottom: 40px;
+    }
+
+    #back{
+      font-size: 2.2rem;
+      visibility: hidden;
+    }
+    #back span{
+      font-size: 1.5rem;
+      font-family: 'Work Sans', 'Helvetica Neue', 'Helvetica', 'Arial', sans-serif;
+    }
+
   </style>
 </head>
 <body>
-<!--TODO: improve design + add description -->
 <div id="container">
-<output id="list"></output>
+  <i class="fa fa-chevron-circle-left" aria-hidden="true" id="back"><span> zurück</span></i>
+  <h1 class="header">CV-Generator</h1>
+  <div id="description">
+<p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.
+
+  Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptatum zzril delenit augue duis dolore te feugait nulla facilisi. Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.
+
+  Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptatum zzril delenit augue duis dolore te feugait nulla facilisi. </p>
 <input type="file" name="files[]" id="files" class="inputfile" data-multiple-caption="{count} files selected" />
 <label for="files"><svg xmlns="http://www.w3.org/2000/svg" width="20" height="17" viewBox="0 0 20 17">
-  <path d="M10 0l-5.2 4.9h3.3v5.1h3.8v-5.1h3.3l-5.2-4.9zm9.3 11.5l-3.2-2.1h-2l3.4 2.6h-3.5c-.1 0-.2.1-.2.1l-.8 2.3h-6l-.8-2.2c-.1-.1-.1-.2-.2-.2h-3.6l3.4-2.6h-2l-3.2 2.1c-.4.3-.7 1-.6 1.5l.6 3.1c.1.5.7.9 1.2.9h16.3c.6 0 1.1-.4 1.3-.9l.6-3.1c.1-.5-.2-1.2-.7-1.5z"/></svg>
+  <path d="M10 0l-5.2 4.9h3.3v5.1h3.8v-5.1h3.3l-5.2-4.9zm9.3 11.5l-3.2-2.1h-2l3.4 2.6h-3.5c-.1 0-.2.1-.2.1l-.8 2.3h-6l-.8-2.2c-.1-.1-.1-.2-.2-.2h-3.6l3.4-2.6h-2l-3.2 2.1c-.4.3-.7 1-.6 1.5l.6 3.1c.1.5.7.9 1.2.9h26.3c.6 0 1.1-.4 1.3-.9l.6-3.1c.1-.5-.2-1.2-.7-1.5z"/></svg>
   <span>XML Datei auswählen...</span>
 </label>
-<h1 id="timelineHeading" class="hidden">Berufserfahrung / Schul- und Berufsausbildung </h1>
-<div id="timeline" style="height: 500px;"></div>
-<div id="canvas-holder" style="width:50%">
-  <h1 id="roseChartHeading" class="hidden">Sprachkenntnisse</h1>
-  <canvas id="roseChart1"></canvas>
-  <canvas id="roseChart2"></canvas>
+</div>
+<div id="timelineContainer" class="hidden">
+<h2 id="timelineHeading">Berufserfahrung / Schul- und Berufsausbildung </h2>
+<div id="timeline"></div>
+</div>
+<div id="roseCharts" class="hidden">
+  <h2 id="roseChartHeading">Sprachkenntnisse</h2>
+  <div id="roseChartGrid" style="width:50%">
+    <canvas id="roseChart1" class="roseChart"></canvas>
+    <canvas id="roseChart2" class="roseChart"></canvas>
+  </div>
 </div>
 
-<h1 id="starRatingHeading" class="hidden">Digitale Kompetenzen</h1>
-<div id="digital" class="hidden">
+<div id="starRating" class="hidden">
+<h2 id="starRatingHeading">Digitale Kompetenzen</h2>
+<div id="digital">
   <div id="legend">
   <div class="star">
     <i class="fa fa-star" aria-hidden="true"></i>
@@ -145,6 +190,8 @@
   </div>
 </div>
 </div>
+</div>
+<!--container-->
 <script>
 // load google charts timeline package
 google.charts.load("current", {packages: ["timeline"]});
@@ -162,7 +209,7 @@ function handleFileSelect(e) {
     let reader = new FileReader();
     reader.onload = function() {
         file = (reader.result);
-        readFile();
+        drawVis(createImages);
     };
     // Read the file as a data URL.
     reader.readAsDataURL(file);
@@ -173,7 +220,7 @@ document.getElementById('files').addEventListener('change', handleFileSelect, fa
 
 // read xml data from uploaded file
 // draw visualizations
-function readFile() {
+function drawVis() {
     const xhr = new XMLHttpRequest();
     xhr.onreadystatechange = function() {
         if (this.readyState === 4 && this.status === 200) {
@@ -192,8 +239,17 @@ function readFile() {
             // star ratings
             readDCDrawStarRatings(cv);
 
-            // convert charts to images
-            createImages();
+            // hide description + button
+            document.getElementById('description').style.display = 'none';
+
+            // show back button + add functionality
+            let back = document.getElementById('back');
+            back.style.visibility = 'visible';
+            back.addEventListener('click', function() { location.reload(); });
+            back.style.cursor = 'pointer';
+
+          // convert charts to images
+          // createImages();
         }
     };
     xhr.open("GET", file, true);
@@ -215,6 +271,7 @@ function drawRoseChart() {
     Chart.defaults.global.defaultFontColor = '#444';
     Chart.defaults.global.defaultFontFamily = "'Work Sans', 'Helvetica Neue', 'Helvetica', 'Arial', sans-serif";
     Chart.defaults.global.defaultFontSize = 14;
+    Chart.defaults.global.defaultColor = '#fff';
 
     let config = [];
     for(let i=0; i<languageDataLabel.length;i++){
@@ -267,6 +324,7 @@ function drawRoseChart() {
                 responsive: true,
                 legend: {
                     position: 'left',
+                    // display: false,
                 },
                 title: {
                     display: true,
@@ -314,13 +372,14 @@ function drawRoseChart() {
         };
     }
 
-    //add chart heading
-    document.getElementById('roseChartHeading').classList.remove('hidden');
+    //set roseCharts to visible
+    document.getElementById('roseCharts').classList.remove('hidden');
 
-    //draw charts
+  //draw charts
     const chart1 = document.getElementById("roseChart1");
     const chart2 = document.getElementById("roseChart2");
     window.myPolarArea = Chart.PolarArea(chart1, config[0]);
+    Chart.defaults.global.legend.display=false;
     window.myPolarArea = Chart.PolarArea(chart2, config[1]);
 }
 
@@ -368,10 +427,11 @@ function drawTimeline() {
         },
         colors: colors,
     };
-    // set heading to visible
-    document.getElementById('timelineHeading').classList.remove('hidden');
+    // set timeline to visible
+    document.getElementById('timelineContainer').classList.remove('hidden');
+    container.style.minHeight = '500px';
 
-    // draw timeline
+  // draw timeline
     chart.draw(dataTable, options);
 }
 
@@ -386,11 +446,9 @@ function readDCDrawStarRatings(cv) {
     let el;
     let p;
 
-    //add starRatingheading
-    document.getElementById('starRatingHeading').classList.remove('hidden');
-
-    //set legend to visible
-    document.getElementById('digital').classList.remove('hidden');
+    //set starRating to visible
+    document.getElementById('starRating').classList.remove('hidden');
+    document.getElementById('digital').style.display = 'grid';
 
     el = document.getElementById('information');
     p = '<p>Datenverarbeitung</p>';
@@ -629,38 +687,18 @@ function getJXONTree (oXMLParent) {
     return vResult;
 }
 
-/*
-	By Osvaldas Valutis, www.osvaldas.info
-	Available for use under the MIT License
-*/
-// show data in input label
-;( function ( document, window, index )
+// show error in input label
+( function ( document)
 {
-  var inputs = document.querySelectorAll( '.inputfile' );
-  Array.prototype.forEach.call( inputs, function( input )
-  {
-    var label	 = input.nextElementSibling,
-      labelVal = label.innerHTML;
-
-    input.addEventListener( 'change', function( e )
-    {
-      var fileName = '';
-      if( this.files && this.files.length > 1 )
-        fileName = ( this.getAttribute( 'data-multiple-caption' ) || '' ).replace( '{count}', this.files.length );
-      else
-        fileName = e.target.value.split( '\\' ).pop();
-
-      if( fileName )
-        label.querySelector( 'span' ).innerHTML = fileName;
-      else
-        label.innerHTML = labelVal;
-    });
-
-    // Firefox bug fix
-    input.addEventListener( 'focus', function(){ input.classList.add( 'has-focus' ); });
-    input.addEventListener( 'blur', function(){ input.classList.remove( 'has-focus' ); });
+  const input = document.getElementById( 'files' );
+  input.addEventListener( 'change', function()  {
+    input.nextElementSibling.querySelector( 'span' ).innerHTML = 'Bitte gültige XML-Datei auswählen!';
   });
-}( document, window, 0 ));
+
+  // Firefox bug fix
+  input.addEventListener( 'focus', function(){ input.classList.add( 'has-focus' ); });
+  input.addEventListener( 'blur', function(){ input.classList.remove( 'has-focus' ); });
+}( document ));
 </script>
 </body>
 </html>
